fixed the styling of containers to more visible

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body[style^="background-image: url"] {
   flex-direction: column;
   align-items: center;
 
-  background: rgba(255, 255, 255, 0.24);
+  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(6.3px);
@@ -60,6 +60,7 @@ body[style^="background-image: url"] {
   font-family: "Poppins", sans-serif;
 }
 .timeContainer {
+  background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(6.3px);
   -webkit-backdrop-filter: blur(6.3px);
@@ -97,6 +98,7 @@ span.date {
   font-family: "Sofia Sans", sans-serif;
   font-weight: bolder;
 
+  background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(15.3px);
   -webkit-backdrop-filter: blur(6.3px);
@@ -118,9 +120,10 @@ span.date {
 
   font-size: 1.5rem;
 
+  background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(15.3px);
-  -webkit-backdrop-filter: blur(6.3px);
+  -webkit-backdrop-filter: blur(15.3px);
   border: 1px solid rgba(255, 255, 255, 0.99);
   border-radius: 1rem;
   place-self: center;
@@ -152,6 +155,7 @@ span.date {
   font-weight: bolder;
   font-size: 1.5rem;
 
+  background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(15.3px);
   -webkit-backdrop-filter: blur(15.3px);
